--- a/css/responsive.css
+++ b/css/responsive.css
@@ -30,7 +30,7 @@
     padding-bottom: 100px;
   }
   .banner_content {
-    margin-top: 0px;
+    margin-top: 20px;
   }
   .banner_content h1 {
     width: auto;
@@ -44,9 +44,10 @@
     font-size: 12px;
     margin-bottom: 0px;
   }
+  .banner .custom_btn {
+    padding: 9px 20px;
+  }
   .banner .custom_btn a {
-    color: #ffffff;
-    font-weight: 500px;
     font-size: 14px;
   }
   .banner_custom_flex {
@@ -74,11 +75,19 @@
     margin: auto;
     font-size: 12px;
   }
-  .banner_img {
-    margin-top: 20px;
+  .banner_content_custom__css {
+    order: 2;
   }
-  .banner_img picture img {
-    display: inline-block;
+  .banner_img_custom__css {
+    order: 1;
+  }
+  .banner_img {
+    margin-top: -7px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .banner_img img {
     width: 100%;
   }
 
@@ -145,20 +154,18 @@
     padding-bottom: 50px;
   }
   .process_content h3 {
-    font-size: 25px;
+    font-size: 35px;
     width: auto;
     line-height: 40px;
-    text-align: center;
-    padding-bottom: 10px;
+    padding-bottom: 20px;
     margin-bottom: 0px;
   }
   .process_content p {
     width: auto;
-    font-size: 12px;
+    font-size: 14px;
     line-height: 18px;
     padding-bottom: 20px;
     margin-bottom: 0px;
-    text-align: center;
   }
   .process_content p:last-child {
     padding-bottom: 40px;
@@ -191,29 +198,29 @@
     width: auto;
     color: #132238;
     margin: auto;
-    padding: 50px 0px 10px 0px;
-    font-size: 30px;
+    padding-bottom: 10px;
+    font-size: 42px;
     text-align: center;
   }
   .portfolio_title p {
     width: auto;
-    line-height: 20px;
+    line-height: 18px;
     color: #87909d;
     margin: 0;
     padding-bottom: 30px;
-    font-size: 12px;
+    font-size: 14px;
   }
   .portfolio_custom_gap {
-    row-gap: 10px;
+    row-gap: 24px;
   }
   .portfolio_custom_card {
-    width: auto;
+    width: 100%;
   }
   .portfolio_content {
     padding: 20px 20px;
   }
   .portfolio_img img {
-    width: 269px;
+    width: 100%;
   }
   .portfolio_custom_card h6 {
     width: auto;
@@ -225,7 +232,6 @@
   .portfolio_custom_card h3 {
     width: auto;
     line-height: 15px;
-    color: #132238;
     padding-bottom: 10px;
     margin-bottom: 0px;
     padding-top: 10px;
@@ -233,17 +239,16 @@
   }
   .portfolio_custom_card p {
     width: auto;
-    line-height: 18px;
-    color: #556070;
+    line-height: 20px;
     padding-bottom: 20px;
     margin-bottom: 0px;
-    font-size: 12px;
+    font-size: 14px;
   }
   .portfolio_btn {
-    padding: 10px 12px;
     display: inline-block;
     border: 1px solid #a53dff;
     border-radius: 4px;
+    padding: 10px 12px;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     -ms-border-radius: 4px;
@@ -254,51 +259,29 @@
     margin-right: 0px;
     font-size: 12px;
   }
-  .custom_card .btn a i {
-    padding-left: 3px;
-    right: 0;
-    top: 0;
-    transform: translateY(23%);
-    -webkit-transform: translateY(23%);
-    -moz-transform: translateY(23%);
-    -ms-transform: translateY(23%);
-    -o-transform: translateY(23%);
-  }
-  #portfolio .custom-btn {
-    position: relative;
-    left: 0%;
-    display: inline-block;
-    padding: 4px 20px 9px 20px;
+  .portfolio_btn_position {
     margin-top: 20px;
-    margin-bottom: 40px;
-    border-radius: 4px;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    -ms-border-radius: 4px;
-    -o-border-radius: 4px;
+    margin-bottom: 0px;
   }
-  #portfolio .custom-btn a {
-    color: #ffffff;
-    font-weight: 500px;
+  .portfolio_btn_position .custom_btn a {
     font-size: 12px;
   }
   /* =========== portfolio part end ============= */
 
-  /* =========== idea part start ============= */
-  #idea {
-    padding: 50px 0px;
+  /* =========== project idea part start ============= */
+  .project {
+    padding: 30px 0px;
     background: #132238;
     text-align: center;
   }
-  .idea_content h2 {
+  .project_content h2 {
     width: auto;
     line-height: 30px;
-    color: #ffffff;
     padding-bottom: 25px;
     margin: 0 auto;
     font-size: 22px;
   }
-  #idea .custom-btn {
+  .project_btn .custom_btn {
     display: inline-block;
     padding: 4px 20px 9px 20px;
     margin-top: 10px;
@@ -309,30 +292,25 @@
     -ms-border-radius: 4px;
     -o-border-radius: 4px;
   }
-  #idea .custom-btn a {
+  .project_btn .custom_btn a {
     color: #ffffff;
     font-weight: 500px;
     font-size: 12px;
   }
   /* =========== idea part end ============= */
 
-  /* =========== services part start ============= */
-  #services {
-    background-color: #f0f1f3;
-    padding: 50px 0px;
+  /* =========== development part start ============= */
+  .development_bg_color {
+    padding: 40px 0px;
   }
-  .services_tittle {
-    text-align: center;
-  }
-  .services_tittle h2 {
+  .development_title h2 {
     width: auto;
     line-height: 20px;
-    color: #333333;
-    padding-bottom: 20px;
-    margin-bottom: 0px;
-    font-size: 22px;
+    text-align: start;
+    font-size: 42px;
   }
-  .services_tittle p {
+  .development_title p {
+    text-align: start;
     font-size: 12px;
     line-height: 20px;
     width: auto;
@@ -340,50 +318,30 @@
     padding-bottom: 13px;
     color: #87909d;
   }
-  .services_tittle .custom-btn {
-    display: inline-block;
-    padding: 4px 20px 9px 20px;
-    margin-top: 10px;
-    margin-bottom: 30px;
-    margin-left: 15px;
-    border-radius: 4px;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    -ms-border-radius: 4px;
-    -o-border-radius: 4px;
+  .development_title p:last-child {
+    margin-bottom: 10px;
   }
-  .services_tittle .custom-btn a {
+  .development_btn .custom_btn {
+    padding: 8px 24px;
+    margin-bottom: 50px;
+  }
+  .development_btn .custom_btn a {
     color: #ffffff;
     font-weight: 500px;
     font-size: 12px;
   }
-  #services .item {
-    background: #ffffff;
-    box-shadow: 0px 32px 96px rgba(28, 25, 25, 0.16);
-    padding: 15px 10px;
-    text-align: center;
+  .development_items {
     width: 100%;
-    border-left: 5px solid transparent;
-    border-radius: 6px;
     margin-bottom: 10px;
-    transition: 0.4s;
-    -webkit-border-radius: 6px;
-    -moz-border-radius: 6px;
-    -ms-border-radius: 6px;
-    -o-border-radius: 6px;
-    -webkit-transition: 0.4s;
-    -moz-transition: 0.4s;
-    -ms-transition: 0.4s;
-    -o-transition: 0.4s;
   }
-  #services .item h4 {
+  .development_items h3 {
+    font-size: 21px;
     width: auto;
     line-height: 100%;
-    color: #132238;
     margin-bottom: 0px;
     padding-bottom: 15px;
   }
-  #services .item p {
+  .development_items p {
     width: auto;
     line-height: 20px;
     color: #556070;
@@ -392,53 +350,59 @@
   /* =========== services part end ============= */
 
   /* =========== clients part start ============= */
-  .clients {
-    padding: 50px 0px;
+  .happy_client {
+    padding: 30px 0px;
   }
-  .clients_tittle h2 {
+  .happy_client_title h2 {
     width: auto;
     line-height: 20px;
-    padding-bottom: 24px;
-    font-size: 22px;
+    padding-bottom: 10px;
+    font-size: 35px;
+    text-align: center;
   }
-  .clients_tittle p {
+  .happy_client_title p {
     width: auto;
     line-height: 20px;
     padding-bottom: 0px;
     font-size: 12px;
   }
-  .clients .img {
+  .client_picture {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100px;
+    padding: 60px 30px;
+  }
+  .client_picture img {
+    display: inline-block;
     text-align: center;
   }
-  .clients .img img {
-    display: inline-block;
-    width: 90px;
-    height: 100px;
-  }
+
   /* =========== clients part end ============= */
 
   /* =========== testimonial part start ============= */
   .testimonial {
-    padding-bottom: 50px;
+    padding-top: 50px;
   }
-  .testimonial_tittle h2 {
+  .testimonial_title h2 {
+    font-size: 35px;
     width: auto;
     line-height: 20px;
-    color: #333333;
     padding-bottom: 20px;
-    margin: auto;
   }
-  .testimonial_tittle p {
+  .testimonial_title p {
     width: auto;
     line-height: 20px;
-    padding-bottom: 30px;
+    padding-top: 0px;
+    padding-bottom: 40px;
     font-size: 12px;
   }
-  .testimonial_content p {
+  .testimonial_msg p {
     width: auto;
     line-height: 20px;
+    padding-top: 0%;
     padding-bottom: 24px;
-    font-size: 12px;
+    font-size: 14px;
   }
   .testimonial_content h4 {
     padding-bottom: 8px;
@@ -451,138 +415,125 @@
     margin-bottom: 0px;
     font-size: 11px;
   }
+  .testimonial_circle {
+    text-align: center;
+  }
 
   /* =========== testimonial part end ============= */
 
   /* =========== contect part start ============= */
-  .contect .custom__bg {
-    background: #ffffff;
-    box-shadow: 0px 59px 124px rgba(0, 0, 0, 0.12);
-    border-radius: 15px;
-    padding: 50px;
-    position: relative;
-    left: 0px;
-    top: 0px;
-  }
-  .contect_content h2 {
+  .your_project_bg {
+    padding: 30px;
     width: auto;
-    line-height: 24px;
-    font-size: 15px;
-    margin-bottom: 0px;
-    padding-bottom: 10px;
   }
-  .contect_content p {
+  .your_project_adress {
+    width: auto;
+  }
+  .your_project_adress h2 {
+    width: 100%;
+    line-height: 24px;
+    font-size: 18px;
+    margin-bottom: 0px;
+    padding-bottom: 20px;
+    text-align: start;
+  }
+  .your_project_adress p {
     width: auto;
     line-height: 20px;
-    margin-bottom: 0px;
-    font-size: 12px;
-    text-align: center;
+    margin-bottom: 16px;
+    font-size: 14px;
+    text-align: start;
   }
-  .contect_content .item {
-    display: flex;
-    background: #ffffff;
-    column-gap: 13px;
-    width: 270px;
+  .your_project_info {
+    width: auto;
     align-items: center;
-    padding: 10px 10px;
+    padding: 10px;
     margin-bottom: 0px;
     flex-wrap: wrap;
     margin-top: 20px;
-    position: relative;
-    right: 25%;
   }
-  .contect_content .item .content h6 {
+  .your_project_content h6 {
     line-height: 20px;
     font-size: 12px;
   }
-  .contect_content .item .content .color {
-    line-height: 24px;
+  .your_project_content address {
     font-size: 14px;
+    line-height: 18px;
   }
-  .contect .icons {
-    margin-top: 15px;
-    position: relative;
-    right: 25%;
+  .your_project_content a {
+    font-size: 14px;
+    line-height: 18px;
   }
-  .contect .icons a i {
+  .your_project_info i {
     color: #a53dff;
     font-size: 16px;
     width: 35px;
     height: 35px;
     text-align: center;
     line-height: 35px;
-    border-radius: 4px;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    -ms-border-radius: 4px;
-    -o-border-radius: 4px;
   }
-  .contect_form_heading h3 {
+  .your_project_icon {
+    text-align: start;
+    margin-bottom: 20px;
+    margin-left: -10px;
+  }
+  .your_project_title h2 {
     width: auto;
     line-height: 20px;
-    text-align: center;
-    font-size: 12px;
+    text-align: start;
+    font-size: 14px;
   }
-  .contect_form form {
-    position: relative;
-    right: 25%;
-    margin-top: -10px;
-    width: 290px;
+
+  .your_project_form form {
+    width: 100%;
   }
-  .contect_form form .contect_box input:first-child {
-    width: 40%;
-    margin-right: 24px;
+  .your_project_form_width :first-child {
+    width: 100%;
+    margin-bottom: 24px;
   }
-  .contect_form form .contect_box input:last-child {
-    width: 50%;
+  .your_project_form_width :last-child {
+    width: 100%;
   }
-  .contect_form form button {
-    width: 89px;
+  .your_project_form form button {
+    width: 140px;
     padding: 12px 10px;
-    font-size: 12px;
-    border-radius: 4px;
-    -webkit-border-radius: 4px;
-    -moz-border-radius: 4px;
-    -ms-border-radius: 4px;
-    -o-border-radius: 4px;
-  }
-  .contect_form form button i {
-    margin-left: 10px;
-    font-size: 12px;
-    transform: rotate(50deg);
-    -webkit-transform: rotate(50deg);
-    -moz-transform: rotate(44deg);
-    -ms-transform: rotate(50deg);
-    -o-transform: rotate(50deg);
   }
   /* =========== contect part end ============= */
 
   /* =========== footer part start ============== */
-  .contect footer {
-    background-color: #2b384c;
-    padding-top: 65px;
-    padding-bottom: 0px;
+  footer {
+    padding-top: 120px;
   }
-  footer .custom__css {
+  .footer_custom_css {
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
   }
-  footer .custom__css .menu {
-    margin-top: 30px;
+  .footer_logo {
+    width: auto;
+    margin-left: -156px;
   }
-  footer .custom__css .menu ul {
+  .footer_menu {
+    margin: 0px 182px;
+  }
+  .footer_menu ul {
+    margin-top: 30px;
     display: flex;
     column-gap: 204px;
     flex-wrap: wrap;
-    row-gap: 15px;
+    row-gap: 24px;
+    margin-left: -175px;
   }
-  footer .custom__css .copyright {
-    margin-left: 0px;
-    margin-top: 10px;
+  .footer_menu a {
+    color: #f0f0f0;
+    line-height: 24px;
   }
-  footer .custom__css .copyright h6 {
+  .footer_copyright h6 {
     font-size: 12px;
+    line-height: 24px;
+    color: #ffffff;
+    margin-top: 50px;
+    text-align: center;
   }
   /* =========== footer part end ============== */
 }
